[gd_scene load_steps=7 format=3 uid="uid://blv1sdwd4eyiq"]

[ext_resource type="Script" path="res://item_box_ui.gd" id="1_rdxyq"]
[ext_resource type="Texture2D" uid="uid://cnd1kj7020uls" path="res://assets/frames/frame.png" id="2_enqfa"]
[ext_resource type="Texture2D" uid="uid://bv1iqqog0x8rs" path="res://assets/items/worm_fall.png" id="3_rsa5e"]

[sub_resource type="LabelSettings" id="LabelSettings_3d7ub"]
font_size = 35

[sub_resource type="AtlasTexture" id="AtlasTexture_onpjt"]
atlas = ExtResource("2_enqfa")
region = Rect2(49.4001, 36.6001, 533.5, 553.3)

[sub_resource type="LabelSettings" id="LabelSettings_v3w55"]
font_size = 50

[node name="ItemBoxUI" type="VBoxContainer"]
script = ExtResource("1_rdxyq")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Worm
"
label_settings = SubResource("LabelSettings_3d7ub")
horizontal_alignment = 1

[node name="ItemBox" type="TextureRect" parent="."]
self_modulate = Color(0.654902, 0.572549, 0.494118, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("AtlasTexture_onpjt")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="ItemBox"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rsa5e")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
text = "0/5"
label_settings = SubResource("LabelSettings_v3w55")
horizontal_alignment = 1
